# physical-ai-and-robotics-book

./: .gitignore  AI_LEARNING_PARTNER_PLAN.md  AUTH-SETUP-COMPLETE.md  CHATWIDGET-DEMO-GUIDE.md  CORS_FIX.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  Dockerfile.backend  Dockerfile.frontend  FIXES-APPLIED.md  FRONTEND_FIXES.md  LLM_PROVIDER_ANALYSIS.md  MIGRATION.md  MULTI_PROVIDER_GUIDE.md  PHASE_1_POLISH_COMPLETE.md  PHASE_1_STATUS.md  PHASE_1_TESTING_GUIDE.md  PHASE_2_COMPLETE.md  PRODUCTION-FIXES.md  PROJECT-OVERVIEW-FOR-VIDEO.md  PROJECT-STRUCTURE-ANALYSIS.md  QDRANT-SETUP-GUIDE.md  README-ORIGINAL.md  README.md  RENDER_DEPLOYMENT.md  STRUCTURE-ANALYSIS.md  VERCEL-FIX.md  VERCEL_SETUP.md  claude.md  deploy-fix.ps1  deploy-fix.sh  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
.github/: copilot-instructions.md
.specify/memory/: constitution.md
_archive/auth/: better-auth.config.py  signup-questions.json
_archive/research/: Hackathon I_ Physical AI & Humanoid Robotics Textbook.md  MASTER-BLUEPRINT.md  Physical-AI-&-Humanoid-Robotics-The-State-of-Embodied-Intelligence.md
backend/: .env.example  QUICKSTART.md  README-RAG.md  SEED_ALL_PROVIDERS.md  create_tables.sql  railway.toml  requirements.txt  setup_database.py  start.ps1
backend/app/: __init__.py  main.py
backend/scripts/: seed_all_providers.py  seed_vector_db.py
frontend/: .env.example  .env.local.example  .env.production  AUTH_SETUP.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
frontend/database/: schema.sql
frontend/docs/: intro.md
frontend/plugins/: webpack-config.js
labs/lab01-ros2-basics/: README.md  SETUP_GUIDE.md
labs/lab01-ros2-basics/solutions/: package.xml  setup.py
labs/lab01-ros2-basics/solutions/heartbeat_package/: heartbeat_node.py
labs/lab01-ros2-basics/solutions/src/: heartbeat_node.py
labs/lab02-urdf-humanoid/: README.md  SETUP_GUIDE.md
labs/lab02-urdf-humanoid/solutions/: CMakeLists.txt
labs/lab02-urdf-humanoid/solutions/urdf/: humanoid.urdf
labs/lab02-urdf-humanoid/starter/: package.xml
labs/lab02-urdf-humanoid/starter/launch/: display.launch.py
labs/lab02-urdf-humanoid/starter/rviz/: humanoid.rviz
labs/lab02-urdf-humanoid/starter/urdf/: humanoid.urdf
labs/lab03-sensor-fusion/: README.md  SETUP_GUIDE.md
research/: MASTER-BLUEPRINT.md
(+129 files in other folders)
